--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,10 +16,10 @@ spec:
       containers:
         - name: tf-cassandra-operator
           # Replace this with the built image name
-          image: REPLACE_IMAGE
+          image: cassandra-tf-operator:v0.0.1
           command:
           - tf-cassandra-operator
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           env:
             - name: WATCH_NAMESPACE
               valueFrom:
