--- a/deploy/crds/cassandra_v1alpha1_cassandra_cr.yaml
+++ b/deploy/crds/cassandra_v1alpha1_cassandra_cr.yaml
@@ -1,7 +1,10 @@
 apiVersion: cassandra.tungstenfabric.io/v1alpha1
 kind: Cassandra
 metadata:
-  name: example-cassandra
+  name: cassandra
+  namespace: contrail
+  registry: docker.io/michaelhenkel
+  version: 5.1.1-dev3
 spec:
   # Add fields here
   size: 3
